--- a/views/pastpolls.ejs
+++ b/views/pastpolls.ejs
@@ -149,7 +149,7 @@
                   <% } %>
                 </p>
                 <div id="details-<%= poll._id %>" style="display: none;" class="mt-3">
-                  <p class="mb-1 text-muted">Options:</p>
+                  <p class="mb-1 text-muted">Answer Options:</p>
                   <ul>
                     <% poll.choices.forEach(choice => { %>
                       <li><%= choice.text %> - <strong><%= choice.votes %></strong> votes</li>
