--- a/views/templates/pollDetail.ejs
+++ b/views/templates/pollDetail.ejs
@@ -11,6 +11,28 @@
 
         <%- include('templates/header') %>
 
+        <main class="container my-4">
+            <div class="mx-auto" style="max-width: 700px;">
+                <div class="card">
+                    <div class="card-body">
+                        <h2 class="card-title mb-3"><%= poll.title %></h2>
+
+
+
+
+
+
+
+
+
+
+                    </div>
+                </div>
+
+                <a href="/polls" class="btn btn-link mt-4">Back to all polls!</a>
+            </div>
+        </main>
+
         <%- include('templates/footer') %>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
     </body>
