Fixed issue where poll details page wasn't loading up, forgot a backslash and moved pollDetails out of the templates folder

--- a/views/templates/poll.ejs
+++ b/views/templates/poll.ejs
@@ -1,7 +1,7 @@
 <div class="card mb-3">
   <div class="card-body">
     <h5 class="card-title">
-      <a href="poll/<%= poll._id %>" class="text-decoration-none">
+      <a href="/poll/<%= poll._id %>" class="text-decoration-none">
         <%= poll.title %>
       </a>
     </h5>
