--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -30,9 +30,9 @@
       <form method="POST" action="/update-feelings">
         <div class="mb-3">
           <label for="feelings" class="form-label">How are you feeling?</label>
-          <input type="text" class="form-control" id="feelings" name="feelings" placeholder="Enter your feelings">
+          <input type="text" class="form-control" id="feelings" name="feelings" placeholder="Enter here to receive a message!">
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary" style="font-size: 16px; height: 40px; background-color: #003366; color: white;">Submit</button>
       </form>
 
       <% if (personalizedMessage) { %>
