Added a bunch of comments for Jayden

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -63,7 +63,7 @@
 
           <% if (personalizedMessage) { %>
             <div class="personalized-message alert alert-info">
-              <p><strong>Personalized Message:</strong> <%= personalizedMessage %></p>
+              <p><strong>Your Message of the Day:</strong> <%= personalizedMessage %></p>
             </div>
           <% } %>
         </div>
