--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -33,7 +33,7 @@
           </a>
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
-          <a href="/managepolls" class="btn btn-outline-warning w-100 py-3 px-4 d-flex align-items-center justify-content-center">
+          <a href="/managetags" class="btn btn-outline-warning w-100 py-3 px-4 d-flex align-items-center justify-content-center">
             <i class="bi bi-sliders me-2 fs-5"></i> Manage Poll Tags
           </a>
         </div>
