--- a/views/pastPolls.ejs
+++ b/views/pastPolls.ejs
@@ -8,7 +8,7 @@
   </title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
-  
+
   <style>
     /* Brand Colors */
     .btn-site-blue {
@@ -17,22 +17,22 @@
       border: none !important;
       transition: background-color 0.3s ease;
     }
-  
+
     .btn-site-blue:hover {
       background-color: #002244 !important;
     }
-  
+
     .btn-site-orange {
       background-color: #f36f21 !important;
       color: #ffffff !important;
       border: none !important;
       transition: background-color 0.3s ease;
     }
-  
+
     .btn-site-orange:hover {
       background-color: #d95e18 !important;
     }
-  
+
     /* Action Buttons (Edit/Delete/Details) */
     .btn-edit-grey,
     .btn-delete-red,
@@ -49,7 +49,7 @@
       justify-content: center;
       padding: 0;
     }
-  
+
     .btn-edit-grey {
       background-color: #6c757d !important;
     }
@@ -202,10 +202,11 @@
                       </form>
 
                       <!-- Full poll detail button -->
-                      <a href="/polldetail/<%= poll._id %>" class="btn btn-success text-white"
+                      <a href="/polldetail/<%= poll._id %>" class="btn btn-view-green text-white"
                         title="View Poll Details">
                         <i class="bi bi-arrow-bar-right"></i>
                       </a>
+
                     </div>
                   </div>
                 </div>
