Added green styling for details button

--- a/views/pastPolls.ejs
+++ b/views/pastPolls.ejs
@@ -66,6 +66,14 @@
       background-color: #b02a37 !important;
     }
 
+    .btn-view-green {
+      background-color: #198754 !important;
+    }
+
+    .btn-view-green:hover {
+      background-color: #146c43 !important;
+    }
+
     .description-text {
       display: block;
       max-width: 100%;
