Changed /polldetail to /poll for correct routing

--- a/views/pastPolls.ejs
+++ b/views/pastPolls.ejs
@@ -210,7 +210,7 @@
                       </form>
 
                       <!-- Full poll detail button -->
-                      <a href="/polldetail/<%= poll._id %>" class="btn btn-view-green text-white"
+                      <a href="/poll/<%= poll._id %>" class="btn btn-view-green text-white"
                         title="View Poll Details">
                         <i class="bi bi-arrow-bar-right"></i>
                       </a>
